made the tests parametric and added part of the required documentation